package util;

public class AppState {
    public static int loggedUserId = -1;
}
