package util;

public interface Bookable {
    boolean book();
    boolean cancel();
}
