package util;

import menu.MainMenu;

public class Main {
    public static void main(String[] args) {
        new MainMenu().start();
    }
}
